fixed dark mode toogle

--- a/_sass/dark-mode.scss
+++ b/_sass/dark-mode.scss
@@ -37,4 +37,9 @@
     .meet-the-pod-div span, .pod-stats-div span, .projects-div span, .blogs-div span, .fellow-locator-div span {
       background: linear-gradient(180deg,rgba(255,255,255,0) 60%, #28293C 60%);
     }
+    
+    .section-footer{
+      background-color: #28293D;
+      color: white;
+    }
   }
