--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -1,7 +1,8 @@
-.section {
+.section-footer {
     // padding-top: 100px;
     // padding-bottom: 100px;
     position: relative;
+    background-color: white;
   }
   
   .footer-link a {
